--- a/happycowgame/app/views/layouts/application.html.erb
+++ b/happycowgame/app/views/layouts/application.html.erb
@@ -2,11 +2,17 @@
 <html>
 <head>
   <title>Happycowgame</title>
+  <script src="js/bower_components/angular/angular.min.js"></script>
+  <script src="js/bower_components/angular-resource/angular-resource.min.js"></script>
+  <script src="js/bower_components/angular-route/angular-route.min.js"></script>
+  <script src="js/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
-<body>
+<body ng-app="happyCow" ng-controller="GameCtrl">
 
 <%= yield %>
 
