--- a/happycowgame/app/assets/stylesheets/styles.css
+++ b/happycowgame/app/assets/stylesheets/styles.css
@@ -8,13 +8,13 @@
   overflow: hidden;
 }
 
-.section-board {
-  padding-top: 20px;
+#center-area .event, .cards, .review {
+  padding: 20px;
 }
 
-.movement {
+#center-area .movement {
   margin-top: 0px;
-  background-image: url('../images/grass-background.png');
+  background-image: url('grass-background.png');
   width: 100%;
   height: 100%;
   z-index: -2;
@@ -28,12 +28,12 @@
 }
 
 #game-board {
-  position: absolute;
+  position: fixed;
   top: 50px;
   left: 20px;
   padding: 20px;
   width: 800px;
-  z-index: 0;
+  z-index: -1;
 }
 
 #board-controls {
@@ -78,32 +78,19 @@ a.menu-button:hover {
   width: 50px;
 }
 
-.bar {
-  clear: both;
-  width: 100%;
-  min-height: 50px;
+#cards-list {
+  height: 300px;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
-.bar.bar-top {
-  top: 0px;
+#cards-list li {
+  width: 200px;
+  height: 300px;
+  white-space: normal;
+  margin-right: 10px;
+  margin-left: 10px;
 }
-.bar.bar-dark {
-  background-color: #222;
-  border: 1px solid #080808;
-  color: #fff;
-}
-.bar.bar-light {
-  background-color: #F5F5F5;
-  border: 1px solid #E3E3E3;
-}
-.bar.bar-bottom {
-  position: absolute;
-  bottom: 10px;
-  left: 25px;
-  width: 95%;
-  border-radius: 5px;
-  padding: 10px;
-}
-
 #cards-list .btn-group {
   margin-top: 5px;
   width: 150px;
@@ -114,20 +101,17 @@ a.menu-button:hover {
 }
 
 /* Turn Control */
-.turn-control {
+.bar.bar-bottom .area {
   height: 50px;
   float:left;
   padding-top: 5px;
   padding-bottom: 5px;
-  opacity: 0.3;
-  margin-right: 10px;
-  padding-right: 10px;
-  border-right: 3px solid #fff;
+  width: 45%;
 }
 
-.turn-control.active { opacity: 1; }
+.bar.bar-bottom .area.area-out { opacity: 0.3; }
 
-.turn-control.last { border-right: 0px; float: right; }
+#card-carousel .carousel-control.left, .carousel-control.right { background-image: none;}
 
 /* Bootstrap changes */
 .clickable, .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
