--- a/happycowgame/app/views/layouts/application.html.erb
+++ b/happycowgame/app/views/layouts/application.html.erb
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>Happycowgame</title>
-  <script src="js/bower_components/angular/angular.min.js"></script>
+  <script src="js/bower_components/angular/angular.js"></script>
   <script src="js/bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="js/bower_components/angular-route/angular-route.min.js"></script>
   <script src="js/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="js/bower_components/angular-modal-service/angular-modal-service.min.js"></script>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -13,7 +14,11 @@
 
 </head>
 <body ng-app="happyCow" ng-controller="GameCtrl">
-
+<style ng-repeat="user in users">
+  .player-{{user.id}} {
+    background-color: #{{user.colour}};
+  }
+</style>
 <%= yield %>
 
 </body>
