--- a/public/templates/phase/movement.html
+++ b/public/templates/phase/movement.html
@@ -1,5 +1,5 @@
 <div class="movement">
-  <img id="game-board" draggable="true" src="assets/cow-background.png"
+  <img id="game-board" draggable="true" src="images/cow-background.png"
       style="width: {{width}}px; left: {{left}}px; top: {{top}}px">
 
   <div ng-repeat="ration in rations" class="ration ration-board clickable"
