--- a/public/templates/phase/review.html
+++ b/public/templates/phase/review.html
@@ -31,7 +31,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
-        <img class="image image-full" ng-src="assets/{{round.event.image}}" alt="Event Image">
+        <img class="image image-full" ng-src="images/{{round.event.image}}" alt="Event Image">
       </div>
       <div class="col-md-8">
         <h4 class="media-heading">{{round.event.title}} <span class="label label-default">{{round.event.type}}</span></h4>
