--- a/public/templates/phase/event.html
+++ b/public/templates/phase/event.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div ng-if="phase == 1" class="bar bar-bottom bar-light">
-    <button class="btn btn-success pull-right" ng-click="nextPhase()">Ok, move to Cards Phase</button>
+    <button class="btn btn-success pull-right" ng-click="endPhase()">Ok, move to Cards Phase</button>
   </div>
 </div>
