--- a/public/templates/phase/cards.html
+++ b/public/templates/phase/cards.html
@@ -73,7 +73,7 @@
         <button class="btn btn-success" data-toggle="modal" data-target="#create-ration">Create</button>
       </div>
       <div class="col-md-3">
-        <button class="btn btn-success pull-right" ng-click="nextPhase()" data-toggle="tooltip" data-placement="top" title="End card actions">
+        <button class="btn btn-success pull-right" ng-click="endPhase()" data-toggle="tooltip" data-placement="top" title="End card actions">
           Finished
         </button>
       </div>
