--- a/app/assets/stylesheets/classes.css
+++ b/app/assets/stylesheets/classes.css
@@ -30,7 +30,6 @@
   height: 40px;
   padding: 0px;
 
-  background-image: url('../images/ration.png');
   background-color: #999;
   border: 1px solid #000;
   border-radius: 5px;
@@ -132,4 +131,8 @@
   width: 95%;
   border-radius: 5px;
   padding: 10px;
+}
+
+.used, .fade {
+  opacity: 0.2;
 }
