--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -14,7 +14,7 @@
 
 #center-area .movement {
   margin-top: 0px;
-  background-image: url('grass-background.png');
+  background-image: url('../images/grass-background.png');
   width: 100%;
   height: 100%;
   z-index: -2;
